# global-governance

./: .coverage  .env.example  .gitignore  AGENTS-from-another-project.md  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-from-another-project.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vercel.json  vite.config.ts
.codex/: config.toml  (+1 more)
backend/: .env.example  manage.py  pyproject.toml  requirements.txt
backend/accounts/: auth.py  permissions.py  services.py  urls.py  views.py
backend/chatbot/: cache.py  contracts.py  dtos.py  nvidia.py  protection.py  section-source-projection.json  section_sources.py  services.py  urls.py  views.py
backend/common/: env.py  responses.py  validation.py
backend/config/: api.py  asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  production.py
backend/graphify-out/: graph.html  manifest.json
backend/ingestion/: dtos.py  pipeline.py  repository.py  services.py
backend/retrieval/: README.md  repositories.py  services.py
backend/sources/: dtos.py  repository.py  services.py  urls.py  views.py
backend/tests/: chatbot_fakes.py  test_admin_auth.py  test_admin_stewardship.py  test_admin_validation.py  test_approved_source_manifest.py  test_chatbot_cache.py  test_chatbot_orchestration.py  test_chatbot_protection.py  test_common_responses.py  test_ingestion_pipeline.py  test_ingestion_repository.py  test_ingestion_services.py  test_nvidia_model_roles.py  test_project_bootstrap.py  test_public_chat_contract.py  test_public_chat_cutover.py  test_request_validation.py  test_retrieval_repository.py  test_retrieval_service.py  test_route_guards.py  test_settings_imports.py
backend/validation/: dtos.py  repository.py  services.py  urls.py  views.py
(+556 files in other folders)
