[project]
name = "global-governance-backend"
version = "0.1.0"
description = "Django orchestration boundary for Global Governance chatbot and admin workflows."
requires-python = ">=3.12,<3.15"
dependencies = [
  "Django==5.2.13",
  "cryptography==46.0.3",
  "PyJWT==2.10.1",
  "pytest==9.0.3",
  "pytest-django==4.12.0",
]

[tool.django]
settings-module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py"]
testpaths = ["tests"]
