[project]
name = "global-governance-backend"
version = "0.1.0"
description = "Django orchestration boundary for Global Governance chatbot and admin workflows."
requires-python = ">=3.12,<3.15"
dependencies = [
  "Django==5.2.13",
  "cryptography==46.0.7",
  "django-stubs==5.2.7",
  "mypy==1.18.2",
  "pip-audit==2.9.0",
  "PyJWT==2.12.0",
  "pytest==9.0.3",
  "pytest-django==4.12.0",
  "ruff==0.14.2",
  "sqlparse==0.5.4",
]

[tool.django]
settings-module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
mypy_path = "backend"
warn_unused_configs = true
check_untyped_defs = true
disallow_any_generics = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "*.migrations.*",
]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.development"
